--- a/django/connectedin/perfis/templates/perfil.html
+++ b/django/connectedin/perfis/templates/perfil.html
@@ -1,11 +1,13 @@
+<!-- connectedin/perfis/templates/perfil.html -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8">
-		<title>ConnectedIn</title>
-	</head>
-	<body>
-		<h1>Detalhe Perfil</h1>
-		nome: {{perfil.nome}}, telefone: {{perfil.telefone}}, empresa: {{perfil.nome_empresa}}
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <title>ConnectedIn</title>
+    </head>
+    <body>
+         <h1>Detalhe Perfil: {{perfil.nome}}</h1>
+         <a href="{% url 'convidar' perfil.id %}">convidar</a>
+    </body>
 </html>
